Made a few minor tweaks.  This might be the final version.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <div class="headerMargin">
 
             <nav class ="navBar">
-                <a href="index.html" class="about">About</a>
-                <a href="portfolio.html" class="portfolio">Portfolio</a>
-                <a href="contact.html" class="contact">Contact</a>
+                <ul>
+                    <li><a href="index.html" class="about">About</a></li>
+                    <li></li><a href="portfolio.html" class="portfolio">Portfolio</a></li>
+                    <li><a href="contact.html" class="contact">Contact</a></li>
+                </ul>
             </nav>
 
             <div class="name"><h2>Eric Crawford</h2></div>
@@ -35,15 +37,15 @@
             <img class="imageContainer" src="assets/images/placeholder3.jpg" alt="Photo of me">
 
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed libero mi, imperdiet sit amet luctus vitae, finibus in mi. Praesent malesuada erat auctor ipsum vehicula molestie. Maecenas non euismod nisl. Maecenas ut nunc odio. Phasellus in magna quis lacus pharetra ultrices. Sed rhoncus arcu congue, viverra mauris bibendum, vehicula leo. Cras sodales vitae ex quis porta.
+                    Hi!  Thanks for visiting my page!  As you can tell from the title, my name is Eric Crawford.  I am currently a member of the first Vanderbilt Software Coding bootcamp class and am working towards a career in software development.  To give you some professional background on myself, I graduated with a degree in Accounting from Trevecca Nazarene University in 2008 and have been working in the audit field for the last 8 years.  Additionally, I received my CPA certification several years ago.  Although, I want to keep my options open, I am seriously thinking of working as a software developer in the financial industry.  We'll see. 
             </p>
             
             <p>
-                Etiam bibendum blandit laoreet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent sodales cursus elit, at venenatis nisi efficitur quis. Aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt egestas auctor. Duis dapibus egestas massa, in placerat lacus bibendum ut. Sed euismod lorem at tempus blandit. Nunc viverra urna sit amet magna scelerisque, nec semper ipsum vulputate. Maecenas a pulvinar magna.
+                    On a personal note, I love the middle-Tennessee area and am a die hard Nashville Predators fan.  I also enjoy traveling and love to snowboard.  I grew up in the Deep South (Dothan, Alabama), but have always held a fondness for the winter.  I am also a born-again Christian and am passionate about my faith.
             </p>
 
             <p>
-                Vivamus facilisis porttitor massa, tempus egestas purus sagittis vitae. Nulla facilisi. Integer nec viverra ante, non iaculis nibh. In malesuada tempor urna a pellentesque. Donec at augue eu dui varius bibendum. Praesent non augue eu nunc vulputate efficitur. Maecenas rhoncus eget magna quis efficitur.
+                    This site is a bit of a work in progress as I get experience with more technologies and add more projects to my portfolio, so be sure to come back soon.  If you have any questions or would like to set up a time to meet, follow the Contact link and send me a message!
             </p>
             
         </div>
