--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,14 @@
         
         <div class="headerMargin">
 
-            <nav class ="navBar">
-                <a href="index.html" class="about">About</a>
-                <a href="portfolio.html" class="portfolio">Portfolio</a>
-                <a href="contact.html" class="contact">Contact</a>
-            </nav>
+
+                <nav class ="navBar">
+                        <ul>
+                            <li><a href="index.html" class="about">About</a></li>
+                            <li></li><a href="portfolio.html" class="portfolio">Portfolio</a></li>
+                            <li><a href="contact.html" class="contact">Contact</a></li>
+                        </ul>
+                    </nav>
 
             <div class="name"><h2>Eric Crawford</h2></div>
 
