Made a few additional tweaks to the site.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
             
             <p>
-                    On a personal note, I love the middle-Tennessee area and am a die hard Nashville Predators fan.  I also enjoy traveling and love to snowboard.  I grew up in the Deep South (Dothan, Alabama), but have always held a fondness for the winter.  I am also a born-again Christian and am passionate about my faith.
+                    On a personal note, I love the middle-Tennessee area and am a die hard Nashville Predators fan.  I also enjoy traveling and love to snowboard.  I grew up in the Deep South, but have always held a fondness for the winter.
             </p>
 
             <p>
