Added link to the portfolio of a new game I created - Flight

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 
         <div class="pFormat">
             
-            <span><img class="galleryImages" src="assets/images/image1.jpg" alt="Photo of me"><div class="galleryLabels">Hangman</div></span> 
+            <span><a href="https://emcrawford1.github.io/Word-Guess-Game/" target="_blank"><img class="galleryImages" src="assets/images/image1.jpg" alt="Photo of me"></a><div class="galleryLabels">Flight!</div></span> 
             
             <span><img class="galleryImages" src="assets/images/image2.jpg" alt="Photo of me"><div class="galleryLabels">RPG Game</div></span>
 
